# CorrelationMatrices

./: README.md  setup.cfg
src/CorMat/: __init__.py  colors.py  distances.py  dtw.py  plots.py  testModule.py  utils.py
src/CorMat/gpu/: __init__.py  distances.py  linalg.py  utils.py
