[metadata]
name = CorMat
version = 0.0.1
license = TBD
description = Tools for analyzing the underlying manifolds of time series data, especially via correlation matrices.
long_description = file: README.md
author = Aaron Jacobson
author_email = N/A
classifiers=
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Scientific/Engineering :: Information Analysis

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    numpy
    pandas
    matplotlib
    scikit-learn
    scipy
    pymanopt

[options.packages.find]
where=src